(Try to) fix route calc not being triggered in nav on mobile tap

--- a/css/nav.css
+++ b/css/nav.css
@@ -117,6 +117,7 @@
     overflow-y: auto;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 404;
+    pointer-events: all;
 }
 
 .nav-search-result-item {
